--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,14 @@
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/Shabir-pages/style.css">
   <title>new project</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div
+  <!-- <div
     class=" hidden sm:hidden md:hidden lg:flex items-center justify-center py-8 bg-[#2ecc71] border-b-[1px] border-solid border-b-green-200 gap-16">
     <div class="flex">
       <img
@@ -301,7 +302,6 @@
     <img class="border-solid border-[1px] rounded-lg w-52" src="/download (6).png" alt="">
     <img class="border-solid border-[1px] rounded-lg w-52" src="/download (7).png" alt="">
     <img class="border-solid border-[1px] rounded-lg w-52" src="/download (7).png" alt="">
-    <img class="border-solid border-[1px] rounded-lg w-52" src="/download (7).png" alt="">
   </div>
   <div style="z-index: 0;" class="bg-[#f7f8fa] pt-20 pl-32 sm:pl-32 md:pl-52 lg:pl-52 relative pb-56">
     <div class="text-[#2ecc71] flex gap-3">
@@ -364,47 +364,7 @@
       </div>
     </div>
   </div>
-  <div style="z-index: 50;"
-    class="absolute grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 items-center justify-center ml-[220px] text-center -mt-28 sm:hidden md:hidden lg:flex">
-    <div class="hidden grid-cols-1 gap-4 p-5 mt-16 bg-white rounded-3xl sm:grid-cols-1 md:grid-cols-2 lg:flex">
-      <div class="flex items-center justify-center gap-[2px] text-center">
-        <input class="py-[18px] bg-gray-200 hover:bg-gray-300 rounded-tl-lg rounded-bl-lg outline-none w-[400px] pl-2"
-          type="text" placeholder="You send" />
-        <div class="flex gap-3 px-4 py-[14px] bg-gray-200 rounded-tr-lg rounded-br-lg">
-          <div class="flex items-center justify-center w-6 h-6 p-1 mt-2 text-center rounded-full bg-amber-500">
-            <svg class="" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
-              <path
-                d="M310.204 242.638c27.73-14.18 45.377-39.39 41.28-81.3-5.358-57.351-52.458-76.573-114.85-81.929V0h-48.528v77.203c-12.605 0-25.525.315-38.444.63V0h-48.528v79.409c-17.842.539-38.622.276-97.37 0v51.678c38.314-.678 58.417-3.14 63.023 21.427v217.429c-2.925 19.492-18.524 16.685-53.255 16.071L3.765 443.68c88.481 0 97.37.315 97.37.315V512h48.528v-67.06c13.234.315 26.154.315 38.444.315V512h48.528v-68.005c81.299-4.412 135.647-24.894 142.895-101.467 5.671-61.446-23.32-88.862-69.326-99.89zM150.608 134.553c27.415 0 113.126-8.507 113.126 48.528 0 54.515-85.71 48.212-113.126 48.212v-96.74zm0 251.776V279.821c32.772 0 133.127-9.138 133.127 53.255-.001 60.186-100.355 53.253-133.127 53.253z" />
-            </svg>
-          </div>
-          <span class="mt-1 text-lg">BTC</span>
-        </div>
-      </div>
-      <svg class="w-10 h-10 p-2 mt-3 bg-gray-300 rounded-xl" xmlns="http://www.w3.org/2000/svg" height="1em"
-        viewBox="0 0 512 512">
-        <path
-          d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V448c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H176c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z" />
-      </svg>
-      <div class="flex items-center justify-center gap-[2px] text-center">
-        <input class="py-[18px] bg-gray-200 rounded-tl-lg rounded-bl-lg outline-none w-[400px] pl-2" type="text"
-          placeholder="You send" />
-        <div class="flex gap-3 px-4 py-[14px] bg-gray-200 hover:bg-gray-300 rounded-tr-lg rounded-br-lg">
-          <div class="flex items-center justify-center w-6 h-6 p-1 mt-2 text-center rounded-full bg-amber-500">
-            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512">
-              <path
-                d="M311.9 260.8L160 353.6 8 260.8 160 0l151.9 260.8zM160 383.4L8 290.6 160 512l152-221.4-152 92.8z" />
-            </svg>
-          </div>
-          <span class="mt-1 text-lg">BTC</span>
-        </div>
-      </div>
-      <div class="px-7">
-        <div class="py-4 bg-[#2ecc71] hover:bg-[#227420] mt-0 rounded-lg w-96">
-          <button class="text-white">Exchange</button>
-        </div>
-      </div>
-    </div>
-  </div>
+
   <div class="relative left-0 right-0 z-50 flex items-center justify-center px-24 -mt-48 -mb-20 text-center lg:hidden">
     <div class="p-5 bg-white w-[600px] rounded-br-3xl rounded-bl-3xl">
       <div class="flex items-center justify-center gap-[2px] text-center">
@@ -440,28 +400,70 @@
       </div>
     </div>
   </div>
-  <div
-    class="bg-[#158041] pt-20 lg:gap-6 items-center flex flex-col justify-center text-center md:flex md:order lg:px-10">
-    <div class="order-2 w-full">
-      <div class="flex bg-[#1c9222] w-full h-14 rounded-lg">
-        <img class="py-1 mx-auto" src="/download (13).svg" alt="">
-      </div>
-      <div class="flex my-2 bg-[#1c9222] w-full h-14 rounded-lg">
-        <img class="py-1 mx-auto" src="/download (14).svg" alt="">
-      </div>
-      <div class="flex bg-[#1c9222] w-full h-14 rounded-lg">
-        <img class="py-1 mx-auto" src="/download (15).svg" alt="">
+  <div class="bg-[#158041]">
+    <div class="absolute left-0 right-0 flex justify-center px-24 text-center">
+      <div class="flex p-10 -mt-10 bg-white rounded-3xl">
+        <div class="flex items-center justify-center gap-[2px] text-center">
+          <input class="py-[18px] bg-gray-200 hover:bg-gray-300 rounded-tl-lg rounded-bl-lg outline-none w-[400px] pl-2"
+            type="text" placeholder="You send" />
+          <div class="flex gap-3 px-4 py-[14px] bg-gray-200 rounded-tr-lg rounded-br-lg">
+            <div class="flex items-center justify-center w-6 h-6 p-1 mt-2 text-center rounded-full bg-amber-500">
+              <svg class="" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+                <path
+                  d="M310.204 242.638c27.73-14.18 45.377-39.39 41.28-81.3-5.358-57.351-52.458-76.573-114.85-81.929V0h-48.528v77.203c-12.605 0-25.525.315-38.444.63V0h-48.528v79.409c-17.842.539-38.622.276-97.37 0v51.678c38.314-.678 58.417-3.14 63.023 21.427v217.429c-2.925 19.492-18.524 16.685-53.255 16.071L3.765 443.68c88.481 0 97.37.315 97.37.315V512h48.528v-67.06c13.234.315 26.154.315 38.444.315V512h48.528v-68.005c81.299-4.412 135.647-24.894 142.895-101.467 5.671-61.446-23.32-88.862-69.326-99.89zM150.608 134.553c27.415 0 113.126-8.507 113.126 48.528 0 54.515-85.71 48.212-113.126 48.212v-96.74zm0 251.776V279.821c32.772 0 133.127-9.138 133.127 53.255-.001 60.186-100.355 53.253-133.127 53.253z" />
+              </svg>
+            </div>
+            <span class="mt-1 text-lg">BTC</span>
+          </div>
+        </div>
+        <svg class="w-10 h-10 p-2 mt-3 bg-gray-300 rounded-xl" xmlns="http://www.w3.org/2000/svg" height="1em"
+          viewBox="0 0 512 512">
+          <path
+            d="M105.1 202.6c7.7-21.8 20.2-42.3 37.8-59.8c62.5-62.5 163.8-62.5 226.3 0L386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H463.5c0 0 0 0 0 0h.4c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32 32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0C73.2 122 55.6 150.7 44.8 181.4c-5.9 16.7 2.9 34.9 19.5 40.8s34.9-2.9 40.8-19.5zM39 289.3c-5 1.5-9.8 4.2-13.7 8.2c-4 4-6.7 8.8-8.1 14c-.3 1.2-.6 2.5-.8 3.8c-.3 1.7-.4 3.4-.4 5.1V448c0 17.7 14.3 32 32 32s32-14.3 32-32V396.9l17.6 17.5 0 0c87.5 87.4 229.3 87.4 316.7 0c24.4-24.4 42.1-53.1 52.9-83.7c5.9-16.7-2.9-34.9-19.5-40.8s-34.9 2.9-40.8 19.5c-7.7 21.8-20.2 42.3-37.8 59.8c-62.5 62.5-163.8 62.5-226.3 0l-.1-.1L125.6 352H176c17.7 0 32-14.3 32-32s-14.3-32-32-32H48.4c-1.6 0-3.2 .1-4.8 .3s-3.1 .5-4.6 1z" />
+        </svg>
+        <div class="flex items-center justify-center gap-[2px] text-center">
+          <input class="py-[18px] bg-gray-200 rounded-tl-lg rounded-bl-lg outline-none w-[400px] pl-2" type="text"
+            placeholder="You send" />
+          <div class="flex gap-3 px-4 py-[14px] bg-gray-200 hover:bg-gray-300 rounded-tr-lg rounded-br-lg">
+            <div class="flex items-center justify-center w-6 h-6 p-1 mt-2 text-center rounded-full bg-amber-500">
+              <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512">
+                <path
+                  d="M311.9 260.8L160 353.6 8 260.8 160 0l151.9 260.8zM160 383.4L8 290.6 160 512l152-221.4-152 92.8z" />
+              </svg>
+            </div>
+            <span class="mt-1 text-lg">BTC</span>
+          </div>
+        </div>
+        <div class="px-7">
+          <div class="py-4 bg-[#2ecc71] hover:bg-[#227420] mt-0 rounded-lg w-96">
+            <button class="text-white">Exchange</button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="flex gap-4 py-4 text-white">
-      <p>Buy & sell crypto</p>
-      <img class="w-[27px] h-[18px] mt-1" src="/download (16).svg" alt="">
-    </div>
-    <div class="hidden lg:flex gap-10 px-2 rounded-lg text-white bg-[#1c9222] py-2">
-      <p>English</p>
-      <div class="flex gap-4">
-        <img src="/download (17).svg" alt="">
-        <img class="-rotate-90 w-[6px] h-[10px] mt-2" src="/download (18).svg" alt="">
+    <br>
+    <div class="flex items-center justify-between pt-20 text-center lg:gap-6 px-60">
+      <div class="grid w-full grid-cols-3 gap-3 lg:w-[28rem]">
+        <div class="flex bg-[#1c9222] w-full h-14 rounded-lg">
+          <img class="mx-auto lg:py-1" src="/download (13).svg" alt="">
+        </div>
+        <div class="flex bg-[#1c9222] w-full h-14 rounded-lg">
+          <img class="py-1 mx-auto" src="/download (14).svg" alt="">
+        </div>
+        <div class="flex bg-[#1c9222] w-full h-14 rounded-lg">
+          <img class="py-1 mx-auto" src="/download (15).svg" alt="">
+        </div>
+      </div>
+      <div class="flex gap-4 py-4 text-white">
+        <p class="items-center">Buy & sell crypto</p>
+        <img class="w-[27px] h-[18px] mt-1 items-center" src="/download (16).svg" alt="">
+        <div class="hidden lg:flex gap-10 rounded-lg p-3 text-white bg-[#1c9222]">
+          <p>English</p>
+          <div class="flex gap-4">
+            <img src="/download (17).svg" alt="">
+            <img class="-rotate-90 w-[6px] h-[10px] mt-2" src="/download (18).svg" alt="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -532,8 +534,49 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+
+
+  <div id="content">
+    <div id="content-2">
+      <form id="main-form">
+        <h1 id="logo"><img src="/Shabir-pages/images.jpg" alt="#"></h1>
+        <div id="user-name">
+          <svg xmlns="http://www.w3.org/2000/svg" id="logo-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"
+              d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
+          </svg>
+          <input id="email" type="email" name="email" placeholder="User name" />
+        </div>
+        <div class="flex items-center px-3 py-2 mb-12 border-2 rounded-2xl ">
+          <svg xmlns="http://www.w3.org/2000/svg" id="logo-1" viewBox="0 0 20 20" fill="currentColor">
+            <path fillRule="evenodd"
+              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+              clipRule="evenodd" />
+          </svg>
+          <input id="email" type="password" name="password" id="password" placeholder="Password" />
+
+        </div>
+        <button type="submit" id="submit">Login</button>
+        <div id="phone-number">
+          <p id="phonee"><span id="phone">+۹۳ ۷۸۴ ۶۸۶ ۰۳۷</span>: شماره تماس</p>
+        </div>
+      </form>
+    </div>
   </div>
+  <div id="footer">
+    <p id="footer-4">طریقه فعال سازی</p>
+    <p id="footer-3">بسته های انترنتی</p>
+    <p id="footer-2">در باره ما</p>
+    <p id="footer-1">معلومات</p>
+  </div>
+
+
+
+
 </body>
+
 <script src=" java.js"></script>
 
 </html>
